<resources>
    <string name="app_name">WaterTrackerApp</string>
    <string name="water_tracker">Water Tracker</string>
    <string name="enter_mls_to_subtract">Enter mLs to subtract</string>
    <string name="_0_ml">0 mL</string>
    <string name="subtract">Subtract</string>
    <string name="settings">Settings</string>
    <string name="image_of_water">Image_of_water</string>
    <string name="water_goal">Water Goal:</string>
    <string name="enter_water_goal_in_ml">Enter water goal in mL</string>
    <string name="ml">mL</string>
    <string name="l">L</string>
    <string name="save">Save</string>
    <string name="water_left_to_drink">Water left to drink:</string>
</resources>