<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/water_goal_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/water_goal"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/water_goal_edit_text"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:inputType="number"
        android:hint="@string/enter_water_goal_in_ml"
        android:layout_below="@id/water_goal_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:autofillHints="water-goal" />

    <RadioGroup
        android:id="@+id/units_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/water_goal_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp">

        <RadioButton
            android:id="@+id/milliliters_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ml"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/liters_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l"/>

    </RadioGroup>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@id/units_radio_group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"/>

</RelativeLayout>
